inserido tela de reservas de clientes, com busca automatica no banco de dados, e correçao em alguns nav's