@@ -8,6 +8,7 @@ import org.springframework.lang.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -41,10 +42,24 @@ public class JwtRequestFilter extends OncePerRequestFilter {
 
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             if (jwtUtil.validateToken(jwt, username)) {
-                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        username, null, java.util.Collections.emptyList());
-                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(authToken);
+                String role = null;
+                try {
+                    role = (String) jwtUtil.extractAllClaims(jwt).get("tipoUsuario");
+                } catch (Exception e) {
+                    System.out.println("[JwtRequestFilter] Erro ao extrair role do token: " + e.getMessage());
+                }
+                if (role != null) {
+                    java.util.List<SimpleGrantedAuthority> authorities = java.util.List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
+                            username, null, authorities);
+                    authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(authToken);
+                    System.out.println("[JwtRequestFilter] Autenticado: " + username + " com role: ROLE_" + role.toUpperCase());
+                } else {
+                    System.out.println("[JwtRequestFilter] Token sem claim tipoUsuario!");
+                }
+            } else {
+                System.out.println("[JwtRequestFilter] Token JWT inválido para usuário: " + username);
             }
         }
         chain.doFilter(request, response);
